--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Sasu Isaac Osafo (snrvibecoder)</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
@@ -11,6 +11,13 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icofont@1.0.0/dist/icofont.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div id="preloader" class="preloader" aria-hidden="true">
@@ -48,10 +55,10 @@
                     Digital products with a <span class="hero__title--accent">human</span> heartbeat.
                 </h1>
                 <p class="hero__subtitle hero__subtitle--typed">
-                    I'm a <span class="typed" data-typed-items="Designer, Developer, Freelancer, Graphic Designer, Entrepreneur"></span><span class="typed-extra" style="display:none;">I'm a fullstack developer blending clarity, craft, and emotion to create interfaces that feel inevitable</span>
+                    I'm a <span class="typed" data-typed-items="Full‑Stack Developer, Backend Engineer, Python Developer, UI/UX Designer, Freelancer"></span><span class="typed-extra" style="display:none;">I'm a full‑stack developer blending clarity, craft, and emotion to create interfaces that feel inevitable</span>
                 </p>
                 <div class="hero__cta button-group button-group--even">
-                    <a class="button button--primary" href="#projects">View selected work</a>
+                    <a class="button button--primary" href="#portfolio">View selected work</a>
                     <a class="button button--ghost" href="#contact">Start a conversation</a>
                 </div>
             </div>
@@ -86,12 +93,11 @@
                 </article>
                 <ul class="about__timeline" aria-label="Experience timeline">
                     <li>
-                        <span class="about__timeline-year">2025 — Present</span>
-                        <div class="about__timeline-role">Backend Developer · Presto Solutions</div>
-                    </li>
-                    <li>
-                        <span class="about__timeline-year">2023 — Present</span>
-                        <div class="about__timeline-role">Full-Stack Developer · Freelance</div>
+                   
+                        <div class="about__timeline-role about__avatar-item">
+                            <img class="about__avatar" src="assets/images/sasu.jpg" alt="Portrait of Sasu Isaac Osafo" loading="lazy">
+                            <p class="about__avatar-caption">Sasu Isaac Osafo — Full‑Stack Developer</p>
+                        </div>
                     </li>
                   
                 </ul>
@@ -139,10 +145,55 @@
                 <p class="section__eyebrow">Resume</p>
                 <h2 class="section__title">Craft backed by precision.</h2>
             </div>
-            <p class="skills__intro">
-                Over my past 3 years in software development, I have specialized in backend development and AI, with a strong
-                focus on writing efficient code and building scalable systems using Python.
-            </p>
+
+            <!-- Education & Experience -->
+            <div class="resume__grid">
+                <div>
+                    <h3 class="resume__heading">Summary</h3>
+                    <p>
+                        Sasu Isaac Osafo — Full‑stack web developer passionate about system architecture, resilient back‑end services,
+                        and exploring AI. I craft efficient, interactive experiences that feel effortless for the people who use them.
+                        Skilled in Python with 3+ years of hands‑on experience; affiliated with products like SourceScout, an AI
+                        research assistant that helps students accelerate academic discovery and learn with confidence.
+                    </p>
+                    <ul class="resume__meta" style="margin-top:0.75rem;">
+                        <li><strong>Location:</strong> Ghana</li>
+                        <li><strong>Email:</strong> <a href="mailto:sasuisaac332@gmail.com">sasuisaac332@gmail.com</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="resume__heading">Education</h3>
+                    <ul class="about__timeline">
+                        <li>
+                            <span class="about__timeline-year">2024 — 2027</span>
+                            <div class="about__timeline-role">Bachelor of Science in Computer Science · Valley View University</div>
+                            <p class="resume__note">Currently a Level 300 student. Focus areas: Python, Flask, SQL.</p>
+                        </li>
+                        <li>
+                            <span class="about__timeline-year">Senior High School</span>
+                            <div class="about__timeline-role">Science track</div>
+                            <p class="resume__note">Foundations in mathematics, physics, and problem‑solving for engineering and computing.</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3 class="resume__heading">Professional experience</h3>
+                    <ul class="about__timeline">
+                        <li>
+                            <span class="about__timeline-year">2025 — Present</span>
+                            <div class="about__timeline-role">Backend Developer Intern · <a href="https://prestoghana.com" target="_blank" rel="noopener">Presto Solutions Ghana</a></div>
+                            <p class="resume__note">Contributing to back‑end services and integrations; collaborating on product features and reliability work.</p>
+                        </li>
+                        <li>
+                            <span class="about__timeline-year">2024 — Present</span>
+                            <div class="about__timeline-role">Full‑Stack Developer · Freelance</div>
+                            <p class="resume__note">End‑to‑end delivery of web applications, from API design to UI polish; projects in Python/Flask and JavaScript.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <h3 class="resume__heading">Skills</h3>
             <div class="skills__list" data-animate="grow">
                 <article class="skill">
                     <div class="skill__header">
@@ -157,6 +208,7 @@
                     <div class="skill__header">
                         <span class="skill__name">JavaScript</span>
                         <span class="skill__value">90%</span>
+
                     </div>
                     <div class="skill__bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                         <span class="skill__bar-fill" style="width: 90%;"></span>
@@ -243,50 +295,34 @@
                 <h2 class="section__title">Signature engagements.</h2>
             </div>
             <div class="projects__list">
-                <article class="project" data-animate="reveal">
-                    <div class="project__meta">
-                        <span class="project__year">2025</span>
-                        <span class="project__client">Nova Health OS</span>
-                    </div>
-                    <h3 class="project__title">Reimagining clinical care with responsive data narratives.</h3>
-                    <p class="project__summary">
-                        Led a unified design language spanning patient dashboards, clinician tooling, and ambient displays.
-                        Increased task efficiency by 32% while reducing onboarding time by half.
-                    </p>
-                    <a class="project__link" href="#" aria-label="View Nova Health case study">
-                        View case study
-                        <span aria-hidden="true">→</span>
+                <!-- Project card with image + optional link -->
+                <article class="project project--image" data-animate="reveal">
+                    <a class="project__link-block" href="http://stephanies-closet.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 1">
+                        <img class="project__thumb" src="assets/images/p2.png" alt="Project 1 title" />
+                        <div class="project__overlay">
+                            <h3 class="project__title">Store</h3>
+                            <span class="project__open">View ↗</span>
+                        </div>
                     </a>
                 </article>
 
-                <article class="project" data-animate="reveal">
-                    <div class="project__meta">
-                        <span class="project__year">2024</span>
-                        <span class="project__client">Aether Mobility</span>
-                    </div>
-                    <h3 class="project__title">An adaptive cockpit for the next wave of EVs.</h3>
-                    <p class="project__summary">
-                        Directed the in-vehicle interface and companion app, orchestrating glanceable UX with immersive 3D moments.
-                        Earned IF Design and Red Dot honors in 2024.
-                    </p>
-                    <a class="project__link" href="#" aria-label="View Aether Mobility case study">
-                        View case study
-                        <span aria-hidden="true">→</span>
+                <article class="project project--image" data-animate="reveal">
+                    <a class="project__link-block" href="#portfolio" target="_blank" rel="noopener" aria-label="Open Project 2">
+                        <img class="project__thumb" src="assets/images/p1.png" alt="Project 2 title" />
+                        <div class="project__overlay">
+                            <h3 class="project__title">Booking</h3>
+                            <span class="project__open">View ↗</span>
+                        </div>
                     </a>
                 </article>
 
-                <article class="project" data-animate="reveal">
-                    <div class="project__meta">
-                        <span class="project__year">2023</span>
-                        <span class="project__client">Horizon Bank</span>
-                    </div>
-                    <h3 class="project__title">A trusted personal finance concierge.</h3>
-                    <p class="project__summary">
-                        Built a modular design system powering personalized advice, adaptive onboarding, and wealth insights across devices.
-                    </p>
-                    <a class="project__link" href="#" aria-label="View Horizon Bank case study">
-                        View case study
-                        <span aria-hidden="true">→</span>
+                <article class="project project--image" data-animate="reveal">
+                    <a class="project__link-block" href="http://assistant.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 3">
+                        <img class="project__thumb" src="assets/images/p3.png" alt="Project 3 title" />
+                        <div class="project__overlay">
+                            <h3 class="project__title">AI</h3>
+                            <span class="project__open">View ↗</span>
+                        </div>
                     </a>
                 </article>
             </div>
@@ -315,24 +351,98 @@
             <div class="contact__grid">
                 <article class="contact__card" data-animate="fade-in">
                     <h3>Invite me to collaborate</h3>
-                    <p><a href="mailto:sasuisaac332@gmail.com">sasuisaac332@gmail.com</a></p>
+                    <form id="contact-form" class="contact__form" autocomplete="on" novalidate>
+                        <div class="form__group">
+                            <label for="cf-name">Your name</label>
+                            <input type="text" id="cf-name" name="name" required placeholder="Jane Doe" />
+                        </div>
+                        <div class="form__group">
+                            <label for="cf-email">Your email</label>
+                            <input type="email" id="cf-email" name="email" required placeholder="you@example.com" />
+                        </div>
+                        <div class="form__group">
+                            <label for="cf-subject">Subject (optional)</label>
+                            <input type="text" id="cf-subject" name="subject" placeholder="Project inquiry" />
+                        </div>
+                        <div class="form__group">
+                            <label for="cf-message">Message</label>
+                            <textarea id="cf-message" name="message" rows="5" required placeholder="Tell me about your project or idea…"></textarea>
+                        </div>
+                        <div class="form__group">
+                            <label for="cf-route">Send via</label>
+                            <select id="cf-route" name="route">
+                                <option value="whatsapp">WhatsApp</option>
+                                <option value="email">Email</option>
+                            </select>
+                        </div>
+                        <div class="form__actions">
+                            <button type="submit" class="button button--primary">Send</button>
+                        </div>
+                        <p class="form__note">Submitting will open your WhatsApp or email app with the message pre‑filled.</p>
+                    </form>
                 </article>
+
+
+
+
                 <article class="contact__card" data-animate="fade-in">
                     <h3>Connect elsewhere</h3>
-                    <ul class="contact__social-list"></ul>
-                        <li><a href="#">LinkedIn</a></li>
-                        <li><a href="#">Tiktok</a></li>
-                        <li><a href="#">Whatsapp</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Telegram</a></li>
+                    <ul class="contact__social-list">
+                        <li>
+                            <a href="https://www.linkedin.com/in/isaac-sasu-56787133a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener" aria-label="LinkedIn profile">
+                                <i class='bx bxl-linkedin'></i>
+                                <span>LinkedIn</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/i.o.sasu?igsh=bHhlazd2YmR3OW9k&utm_source=qr" target="_blank" rel="noopener" aria-label="Instagram profile">
+                                <i class='bx bxl-instagram'></i>
+                                <span>Instagram</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/share/1A8afRshdc/?mibextid=wwXIfr" target="_blank" rel="noopener" aria-label="Facebook profile">
+                                <i class='bx bxl-facebook'></i>
+                                <span>Facebook</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.tiktok.com/@snrvibecoder?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener" aria-label="TikTok profile">
+                                <i class='bx bxl-tiktok'></i>
+                                <span>TikTok</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://x.com/sasu_savagee?s=21" target="_blank" rel="noopener" aria-label="Twitter or X profile">
+                                <i class='bx bxl-twitter'></i>
+                                <span>Twitter / X</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/sasusavage" target="_blank" rel="noopener" aria-label="GitHub profile">
+                                <i class='bx bxl-github'></i>
+                                <span>GitHub</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://wa.me/233201142183" target="_blank" rel="noopener" aria-label="WhatsApp chat">
+                                <i class='bx bxl-whatsapp'></i>
+                                <span>WhatsApp</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:sasuisaac332@gmail.com" aria-label="Send email">
+                                <i class='bx bx-envelope'></i>
+                                <span>Email</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="tel:+233201142183" aria-label="Call phone number">
+                                <i class='bx bx-phone'></i>
+                                <span>+233 201142183</span>
+                            </a>
+                        </li>
                     </ul>
-                </article>
-                </article>
-                <article class="contact__card" data-animate="fade-in">
-                    <h3>Download dossier</h3>
-                    <p><a href="#">View credentials →</a></p>
                 </article>
             </div>
         </section>
