Add Telegram backend for contact form + mobile UI fixes
- Added Flask backend with Telegram bot integration for contact form
- Backend includes: app.py, requirements.txt, .env.example, README
- Updated frontend JS to send form data to backend API
- Added 'Direct Message' option to contact form (uses Telegram)
- Fixed mobile text alignment (now centered)
- Made menu button sleeker with glassmorphism style
- Fixed nav drawer scroll jump issue
- Projects grid now responsive (3/2/1 columns)

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 </article>
 
                 <article class="project project--image" data-animate="reveal">
-                    <a class="project__link-block" href="#portfolio" target="_blank" rel="noopener" aria-label="Open Project 2">
+                    <a class="project__link-block" href="http://assistant.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 2">
                         <img class="project__thumb" src="assets/images/p1.png" alt="Project 2 title" />
                         <div class="project__overlay">
                             <h3 class="project__title">Booking</h3>
@@ -314,7 +314,7 @@
 
                 <article class="project project--image" data-animate="reveal">
                     <a class="project__link-block" href="http://assistant.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 3">
-                        <img class="project__thumb" src="assets/images/p3.png" alt="Project 3 title" />
+                        <img class="project__thumb" src="assets/images/image.png" alt="Project 3 title" />
                         <div class="project__overlay">
                             <h3 class="project__title">AI</h3>
                             <span class="project__open">View ↗</span>
@@ -367,6 +367,7 @@
                         <div class="form__group">
                             <label for="cf-route">Send via</label>
                             <select id="cf-route" name="route">
+                                <option value="telegram">Direct Message</option>
                                 <option value="whatsapp">WhatsApp</option>
                                 <option value="email">Email</option>
                             </select>
@@ -374,7 +375,7 @@
                         <div class="form__actions">
                             <button type="submit" class="button button--primary">Send</button>
                         </div>
-                        <p class="form__note">Submitting will open your WhatsApp or email app with the message pre‑filled.</p>
+                        <p class="form__note">Your message will be sent directly to me.</p>
                     </form>
                 </article>
 
