Improve contact UX and Telegram backend env loading

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="projects__list">
                 <!-- Project card with image + optional link -->
                 <article class="project project--image" data-animate="reveal">
-                    <a class="project__link-block" href="http://stephanies-closet.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 1">
+                    <a class="project__link-block" href="https://stephanies-closet.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 1">
                         <img class="project__thumb" src="assets/images/p2.png" alt="Project 1 title" />
                         <div class="project__overlay">
                             <h3 class="project__title">Store</h3>
@@ -303,7 +303,7 @@
                 </article>
 
                 <article class="project project--image" data-animate="reveal">
-                    <a class="project__link-block" href="http://assistant.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 2">
+                    <a class="project__link-block" href="https://assistant.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 2">
                         <img class="project__thumb" src="assets/images/p1.png" alt="Project 2 title" />
                         <div class="project__overlay">
                             <h3 class="project__title">Booking</h3>
@@ -313,7 +313,7 @@
                 </article>
 
                 <article class="project project--image" data-animate="reveal">
-                    <a class="project__link-block" href="http://assistant.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 3">
+                    <a class="project__link-block" href="https://assistant.sasulabs.me" target="_blank" rel="noopener" aria-label="Open Project 3">
                         <img class="project__thumb" src="assets/images/image.png" alt="Project 3 title" />
                         <div class="project__overlay">
                             <h3 class="project__title">AI</h3>
@@ -440,6 +440,7 @@
             </div>
         </section>
     </main>
+    <div id="toast-root" class="toast-root" aria-live="polite" aria-atomic="true"></div>
 
     <footer class="footer" data-animate="fade-up">
         <p>© <span id="year">2025</span> Sasu Isaac Osafo. Built with empathy and precision.</p>
